# Mace-eBPF

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  Vagrantfile  run_memory_checks.sh  test_memfd_create.py  test_ptrace_attach.py
.github/workflows/: ci.yml  core-compat.yml  docker-publish.yml  ffi-assurance.yml  release.yml  rust.yml
aegis-ebpf/: Cargo.toml  Makefile  build.rs  cbindgen.toml
aegis-ebpf-common/: Cargo.toml
aegis-ebpf-common/src/: lib.rs
aegis-ebpf-ebpf/: Cargo.toml
aegis-ebpf-ebpf/src/: main.rs
aegis-ebpf-loader/src/: main.rs
aegis-ebpf/benches/: arena_benchmark.rs  rule_engine_bench.rs
aegis-ebpf/examples/: c_smoke_test.c
aegis-ebpf/examples/observability/: README.md  docker-compose.yml  prometheus.yml
aegis-ebpf/examples/observability/grafana/dashboards/: aegis-dashboard.json
aegis-ebpf/examples/observability/grafana/provisioning/dashboards/: dashboards.yml
aegis-ebpf/include/: aegis.h
aegis-ebpf/pkg/aegis/: README.md  aegis.go  alert_handle.go  arena_gc_test.go  arena_handle.go  run_go_tests.sh  throughput_stress_test.go
aegis-ebpf/proto/: alert.proto
aegis-ebpf/python/: README.md  mypy.ini  setup.py
aegis-ebpf/python/aegis/: __init__.py  _ffi.py  alert.py  arena.py  types.py
aegis-ebpf/python/aegis/proto/: __init__.py  alert_pb2.py
aegis-ebpf/python/examples/: basic.py
aegis-ebpf/python/tests/: test_bindings.py
aegis-ebpf/rules/: README.md  memory_threats.yaml
aegis-ebpf/src/: alert.rs  cmdline_context.rs  enrichment.rs  lib.rs  logging.rs  main.rs
aegis-ebpf/src/enrichment/: kubernetes.rs  normalization.rs
aegis-ebpf/src/ffi/: alert_channel.rs  arena.rs  engine.rs  event_callback.rs  handle.rs  mod.rs  types.rs
aegis-ebpf/src/observability/: metrics.rs  otel.rs  prometheus.rs
aegis-ebpf/src/pipeline/: config.rs  mod.rs
aegis-ebpf/src/proto/: mod.rs
aegis-ebpf/src/rules/: loader.rs  mod.rs  watcher.rs
aegis-ebpf/src/state/: mod.rs
aegis-ebpf/tests/: ebpf_overhead_bench.rs  ebpf_syscall_stress_test.rs  observability_integration.rs  tracepoint_attach_test.rs  verifier_load_test.rs
clients/go/: go.mod
clients/go/aegis/: aegis.go  aegis_test.go  types.go  types_test.go
clients/go/cmd/mace-agent/: main.go
clients/go/examples/: examples  go.mod  main.go
clients/go/internal/agentconfig/: config.go  config_test.go
clients/go/mace/: mace.go  mace_test.go  types_test.go
docs/: PROJECT_STATE.md  README.md  aegis_log_level.md  writing_rules.md
docs/1-getting-started/: audiences.md  overview.md  quickstart.md
docs/2-installation/: from-source.md  linux-deb.md
docs/3-concepts/: architecture.md  events-and-alerts.md  rules-engine.md
docs/4-configuration/: agent-config.md  logging.md
docs/5-developer-guide/: environment-setup.md  testing-and-ci.md
docs/6-references/audits/: PHASE_1_TO_4_AUDIT_REPORT.md
docs/6-references/versions/: v0.1.x.md
mace-ebpf/: Cargo.toml  Makefile  build.rs  cbindgen.toml
mace-ebpf-common/: Cargo.toml
mace-ebpf-common/src/: lib.rs
mace-ebpf-ebpf/: Cargo.toml
mace-ebpf-ebpf/src/: main.rs
mace-ebpf-loader/: Cargo.toml
mace-ebpf-loader/src/: main.rs
mace-ebpf/benches/: arena_benchmark.rs  rule_engine_bench.rs
mace-ebpf/examples/: c_smoke_test.c
mace-ebpf/examples/observability/: README.md  docker-compose.yml  prometheus.yml
mace-ebpf/examples/observability/grafana/dashboards/: mace-dashboard.json
mace-ebpf/examples/observability/grafana/provisioning/dashboards/: dashboards.yml
mace-ebpf/include/: mace.h
mace-ebpf/pkg/mace/: README.md  alert.go  alert_handle.go  alert_integrity_test.go  alert_unit_test.go  arena_gc_test.go  arena_handle.go  event.go  example_test.go  go.mod  mace.go  run_go_tests.sh  sensor.go  throughput_stress_test.go
mace-ebpf/pkg/mace/maceproto/: alert.pb.go
mace-ebpf/proto/: alert.proto
mace-ebpf/python/: README.md  mypy.ini  setup.py
mace-ebpf/python/examples/: basic.py
mace-ebpf/python/mace/: __init__.py  _ffi.py  alert.py  arena.py  engine.py  types.py
mace-ebpf/python/mace/proto/: alert_pb2.py
mace-ebpf/python/tests/: test_bindings.py
mace-ebpf/rules/: README.md  memory_threats.yaml
mace-ebpf/src/: alert.rs  cmdline_context.rs  engine_stage.rs  execve_wire.rs  lib.rs  logging.rs  main.rs  passwd.rs
mace-ebpf/src/enrichment/: kubernetes.rs
mace-ebpf/src/ffi/: alert_channel.rs  arena.rs  engine.rs  event_callback.rs  handle.rs  jit_storm.rs  mod.rs  types.rs
mace-ebpf/src/observability/: metrics.rs  mod.rs  otel.rs
mace-ebpf/src/pipeline/: mod.rs
mace-ebpf/src/proto/: mod.rs
mace-ebpf/src/rules/: loader.rs  mod.rs  watcher.rs
mace-ebpf/src/state/: mod.rs
mace-ebpf/tests/: ebpf_overhead_bench.rs  ebpf_syscall_stress_test.rs  observability_integration.rs  tracepoint_attach_test.rs  verifier_load_test.rs
mace-ebpf/tests/common/: mod.rs
packaging/: config.yaml  mace-agent.config.example.yaml  mace.service  nfpm.yaml  postinst.sh  postrm.sh  prerm.sh  rules.yaml
scripts/ci/: criterion_baseline.json  criterion_gate.py
scripts/vm/: README-kernel-matrix.md  git-commit-matrix-files.sh  prepare-artifact.sh  provision-common.sh  provision-kernel.sh  run-matrix.sh  run-test.sh
scripts/vm/suites/: step-2.3-toctou-lru.sh  step-2.3-toctou-lru.sh.example
tests/offensive/: README.md  gtfobins_node_shell.sh  rules_node_gtfobins.yaml
tests/offensive/fixtures/: node_gtfobins_execve.json
tests/simulations/: attack_simulator.py  mace-agent.example.yaml  rules.yaml
