[package]
name = "aegis-ebpf"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[features]
default = []
tokio = []
kubernetes = ["dep:kube", "dep:k8s-openapi", "dep:moka", "tokio"]

[dependencies]
aegis-ebpf-common = { path = "../aegis-ebpf-common", features = ["user"] }

anyhow = "1"
async-trait = "0.1.89"
aya = { workspace = true }
aya-log = { workspace = true }
env_logger = { workspace = true }
k8s-openapi = { version = "0.22", features = ["v1_29"], optional = true }
kube = { version = "0.91", features = ["runtime", "client"], optional = true }
libc = { workspace = true }
log = { workspace = true }
moka = { version = "0.12.15", features = ["sync"], optional = true }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
futures = "0.3"
arc-swap = "1"
notify = "6"
prost = "0.13"
prost-types = "0.13"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["fmt"] }
[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
cargo_metadata = { workspace = true }
prost-build = "0.13"
# TODO(https://github.com/rust-lang/cargo/issues/12375): this should be an artifact dependency, but
# it's not possible to tell cargo to use `-Z build-std` to build it. We cargo-in-cargo in the build
# script to build this, but we want to teach cargo about the dependency so that cache invalidation
# works properly.
#
# Note also that https://github.com/rust-lang/cargo/issues/10593 occurs when `target = ...` is added
# to an artifact dependency; it seems possible to work around that by setting `resolver = "1"` in
# Cargo.toml in the workspace root.
#
# Finally note that *any* usage of `artifact = ...` in *any* Cargo.toml in the workspace breaks
# workflows with stable cargo; stable cargo outright refuses to load manifests that use unstable
# features.
aegis-ebpf-ebpf = { path = "../aegis-ebpf-ebpf" }

[lib]
name = "aegis_ebpf"
path = "src/lib.rs"

[[bin]]
name = "aegis-ebpf"
path = "src/main.rs"
