[package]
name = "mace-ebpf-loader"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Minimal userspace helper to load and attach Mace eBPF programs (CO-RE / kernel matrix tests)."

[[bin]]
name = "mace-ebpf-loader"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
# Full Aya (maps, programs) for loading the pre-built object on target kernels.
aya = { workspace = true, default-features = true }
libc = { workspace = true }
