[package]
name = "mace-ebpf"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[features]
default = []
tokio = []
kubernetes = ["dep:kube", "dep:k8s-openapi", "dep:moka", "tokio"]
# Observability (optional; metrics macros compile to no-ops without `metrics` recorder)
prometheus = ["dep:metrics", "metrics-exporter-prometheus/http-listener"]
otel = [
    "dep:metrics",
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
]
observability = ["prometheus", "otel"]

[dependencies]
mace-ebpf-common = { path = "../mace-ebpf-common", features = ["user"] }

anyhow = "1"
async-trait = "0.1.89"
aya = { workspace = true }
aya-log = { workspace = true }
env_logger = { workspace = true }
k8s-openapi = { version = "0.22", features = ["v1_29"], optional = true }
kube = { version = "0.91", features = ["runtime", "client"], optional = true }
libc = { workspace = true }
log = { workspace = true }
moka = { version = "0.12.15", features = ["sync"], optional = true }
regex = "1"
# Pin above RUSTSEC-2026-0104 (rustls-webpki CRL parsing); pulled transitively via reqwest/kube.
rustls-webpki = "0.103.13"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
futures = "0.3"
arc-swap = "1"
notify = "6"
prost = "0.13"
prost-types = "0.13"
serde_json = "1"
uuid = { version = "1.11", features = ["v4"] }

metrics = { version = "0.24", optional = true }
metrics-exporter-prometheus = { version = "0.18", default-features = false, optional = true }
opentelemetry = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "trace"], optional = true }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "trace"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
libc = { workspace = true }
serial_test = "3"

[[bench]]
name = "arena_benchmark"
harness = false

[[bench]]
name = "rule_engine_bench"
harness = false

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
cargo_metadata = { workspace = true }
prost-build = "0.13"
cbindgen = "0.27"
mace-ebpf-ebpf = { path = "../mace-ebpf-ebpf" }

[lib]
name = "mace_ebpf"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "mace-ebpf"
path = "src/main.rs"
